// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SongTrackRenderer > レンダリングイベントが正しく発行される 1`] = `
{
  "renderingEventInfos": [
    {
      "phraseInfos": Map {
        "561dec9c718d8d49de3211b895df9cec3d862923cf5631733048f600774fce4e" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000002",
              "lyric": "て",
              "noteNumber": 60,
              "phonemeSeedSource": 1,
              "position": 1920,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000003",
              "lyric": "す",
              "noteNumber": 62,
              "phonemeSeedSource": 2,
              "position": 2400,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000004",
              "lyric": "と",
              "noteNumber": 64,
              "phonemeSeedSource": 3,
              "position": 2880,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 1.5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
        "3008f96721df2b2a05f4891582e788d6ca0e83805de7e402973b52679a755af6" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000005",
              "lyric": "い",
              "noteNumber": 60,
              "phonemeSeedSource": 4,
              "position": 3840,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000006",
              "lyric": "ち",
              "noteNumber": 60,
              "phonemeSeedSource": 5,
              "position": 4320,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 3.5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
        "9c320dabec477dc39b4d25e96cfd70ce36dedd52ef5c370bb0c55f6876779d3e" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000007",
              "lyric": "に",
              "noteNumber": 62,
              "phonemeSeedSource": 6,
              "position": 5280,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
      },
      "type": "phrasesGenerated",
    },
    {
      "phraseInfos": Map {
        "561dec9c718d8d49de3211b895df9cec3d862923cf5631733048f600774fce4e" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000002",
              "lyric": "て",
              "noteNumber": 60,
              "phonemeSeedSource": 1,
              "position": 1920,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000003",
              "lyric": "す",
              "noteNumber": 62,
              "phonemeSeedSource": 2,
              "position": 2400,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000004",
              "lyric": "と",
              "noteNumber": 64,
              "phonemeSeedSource": 3,
              "position": 2880,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 1.5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
        "3008f96721df2b2a05f4891582e788d6ca0e83805de7e402973b52679a755af6" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000005",
              "lyric": "い",
              "noteNumber": 60,
              "phonemeSeedSource": 4,
              "position": 3840,
            },
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000006",
              "lyric": "ち",
              "noteNumber": 60,
              "phonemeSeedSource": 5,
              "position": 4320,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 3.5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
        "9c320dabec477dc39b4d25e96cfd70ce36dedd52ef5c370bb0c55f6876779d3e" => {
          "notes": [
            {
              "duration": 480,
              "id": "00000000-0000-4000-0000-000000000007",
              "lyric": "に",
              "noteNumber": 62,
              "phonemeSeedSource": 6,
              "position": 5280,
            },
          ],
          "queryHash": undefined,
          "queryKey": undefined,
          "singingPitchHash": undefined,
          "singingPitchKey": undefined,
          "singingVoiceHash": undefined,
          "singingVoiceKey": undefined,
          "singingVolumeHash": undefined,
          "singingVolumeKey": undefined,
          "startTime": 5,
          "trackId": "00000000-0000-4000-0000-000000000001",
        },
      },
      "type": "cacheLoaded",
    },
    {
      "phraseKey": "561dec9c718d8d49de3211b895df9cec3d862923cf5631733048f600774fce4e",
      "type": "phraseRenderingStarted",
    },
    {
      "phraseKey": "561dec9c718d8d49de3211b895df9cec3d862923cf5631733048f600774fce4e",
      "queryHash": "9969e3e89e2616fc3e6da6ee5f3694bbcc0b2848eb056341c62e3ce4521135db",
      "queryKey": "e6b405a16e0a47c47dc9acf546f8db53981e1a783d9459d23c2339adabca88ca",
      "type": "queryGenerationComplete",
    },
    {
      "phraseKey": "561dec9c718d8d49de3211b895df9cec3d862923cf5631733048f600774fce4e",
      "singingPitchHash": "9228d480d6cb405f77461ec4c1b7fa0f1d0bcc6ff2ecf9d038c2aadca449cff4",
      "singingPitchKey": "3d87943e412139517db2a3d4e193fc6f2234fd7a9825c7f23787c4334a018b0c",
      "type": "pitchGenerationComplete",
    },
    {
      "phraseKey": "561dec9c718d8d49de3211b895df9cec3d862923cf5631733048f600774fce4e",
      "singingVolumeHash": "34deaab02b5eb0f134f81879e50df214a661937a0474bb0354d7067f88102eef",
      "singingVolumeKey": "7162fee52dd5a2d7ed485210544f953349d2499f9c152180fb251e907893175b",
      "type": "volumeGenerationComplete",
    },
    {
      "phraseKey": "561dec9c718d8d49de3211b895df9cec3d862923cf5631733048f600774fce4e",
      "singingVoiceHash": "6f4c259b73cb8831089f8da61b8c0d34a2b6c9dc8053e27d6719ee0656773971",
      "singingVoiceKey": "67d25f105aa7cd17d18df25372121592e84862a9e33797fd875dc5cd1859ed3e",
      "type": "voiceSynthesisComplete",
    },
    {
      "phraseInfo": {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000002",
            "lyric": "て",
            "noteNumber": 60,
            "phonemeSeedSource": 1,
            "position": 1920,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000003",
            "lyric": "す",
            "noteNumber": 62,
            "phonemeSeedSource": 2,
            "position": 2400,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000004",
            "lyric": "と",
            "noteNumber": 64,
            "phonemeSeedSource": 3,
            "position": 2880,
          },
        ],
        "queryHash": "9969e3e89e2616fc3e6da6ee5f3694bbcc0b2848eb056341c62e3ce4521135db",
        "queryKey": "e6b405a16e0a47c47dc9acf546f8db53981e1a783d9459d23c2339adabca88ca",
        "singingPitchHash": "9228d480d6cb405f77461ec4c1b7fa0f1d0bcc6ff2ecf9d038c2aadca449cff4",
        "singingPitchKey": "3d87943e412139517db2a3d4e193fc6f2234fd7a9825c7f23787c4334a018b0c",
        "singingVoiceHash": "6f4c259b73cb8831089f8da61b8c0d34a2b6c9dc8053e27d6719ee0656773971",
        "singingVoiceKey": "67d25f105aa7cd17d18df25372121592e84862a9e33797fd875dc5cd1859ed3e",
        "singingVolumeHash": "34deaab02b5eb0f134f81879e50df214a661937a0474bb0354d7067f88102eef",
        "singingVolumeKey": "7162fee52dd5a2d7ed485210544f953349d2499f9c152180fb251e907893175b",
        "startTime": 1.5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "phraseKey": "561dec9c718d8d49de3211b895df9cec3d862923cf5631733048f600774fce4e",
      "type": "phraseRenderingComplete",
    },
    {
      "phraseKey": "3008f96721df2b2a05f4891582e788d6ca0e83805de7e402973b52679a755af6",
      "type": "phraseRenderingStarted",
    },
    {
      "phraseKey": "3008f96721df2b2a05f4891582e788d6ca0e83805de7e402973b52679a755af6",
      "queryHash": "d042988b8760c555d53c6862fe71e1df34d60a6eda81271b10e947919393af44",
      "queryKey": "20217ea4ffb176cadd593c1d03a0797a141a039f1d12e809ae24ed6157d5e920",
      "type": "queryGenerationComplete",
    },
    {
      "phraseKey": "3008f96721df2b2a05f4891582e788d6ca0e83805de7e402973b52679a755af6",
      "singingPitchHash": "25558925c922c10ecc60e53ea2e85417c88cbbc5e17990045421138d9468cd35",
      "singingPitchKey": "86eeec91333143dc17f87f3e4277daa193bdd5e8d145c8cf4953de9f32b8fe04",
      "type": "pitchGenerationComplete",
    },
    {
      "phraseKey": "3008f96721df2b2a05f4891582e788d6ca0e83805de7e402973b52679a755af6",
      "singingVolumeHash": "01290852d0764175ff7a9bb8b23774bd80a8c8c3ce0fee4e83055c5900f3a3ba",
      "singingVolumeKey": "7d66577caf8f09e79473c9ae418a1ad69e9e7eb11a7e9f26f4271c9ddfa7dbd7",
      "type": "volumeGenerationComplete",
    },
    {
      "phraseKey": "3008f96721df2b2a05f4891582e788d6ca0e83805de7e402973b52679a755af6",
      "singingVoiceHash": "dde936509a0c4c73749812e52d198a7600f7f8710aa06059977037d9654db731",
      "singingVoiceKey": "c1970f3d570c706fcd7ccaf7e583a0f2c8097351bbac0ff5b437cb1d6423dea9",
      "type": "voiceSynthesisComplete",
    },
    {
      "phraseInfo": {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000005",
            "lyric": "い",
            "noteNumber": 60,
            "phonemeSeedSource": 4,
            "position": 3840,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000006",
            "lyric": "ち",
            "noteNumber": 60,
            "phonemeSeedSource": 5,
            "position": 4320,
          },
        ],
        "queryHash": "d042988b8760c555d53c6862fe71e1df34d60a6eda81271b10e947919393af44",
        "queryKey": "20217ea4ffb176cadd593c1d03a0797a141a039f1d12e809ae24ed6157d5e920",
        "singingPitchHash": "25558925c922c10ecc60e53ea2e85417c88cbbc5e17990045421138d9468cd35",
        "singingPitchKey": "86eeec91333143dc17f87f3e4277daa193bdd5e8d145c8cf4953de9f32b8fe04",
        "singingVoiceHash": "dde936509a0c4c73749812e52d198a7600f7f8710aa06059977037d9654db731",
        "singingVoiceKey": "c1970f3d570c706fcd7ccaf7e583a0f2c8097351bbac0ff5b437cb1d6423dea9",
        "singingVolumeHash": "01290852d0764175ff7a9bb8b23774bd80a8c8c3ce0fee4e83055c5900f3a3ba",
        "singingVolumeKey": "7d66577caf8f09e79473c9ae418a1ad69e9e7eb11a7e9f26f4271c9ddfa7dbd7",
        "startTime": 3.5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "phraseKey": "3008f96721df2b2a05f4891582e788d6ca0e83805de7e402973b52679a755af6",
      "type": "phraseRenderingComplete",
    },
    {
      "phraseKey": "9c320dabec477dc39b4d25e96cfd70ce36dedd52ef5c370bb0c55f6876779d3e",
      "type": "phraseRenderingStarted",
    },
    {
      "phraseKey": "9c320dabec477dc39b4d25e96cfd70ce36dedd52ef5c370bb0c55f6876779d3e",
      "queryHash": "a730dc27652d3d07029364f2f15549f930c4deea5f80b6adee5aaa50f60c5e32",
      "queryKey": "5be244819942af9a9a3d595ae701721dc91c1b1bd6ba1106024982daa63314b0",
      "type": "queryGenerationComplete",
    },
    {
      "phraseKey": "9c320dabec477dc39b4d25e96cfd70ce36dedd52ef5c370bb0c55f6876779d3e",
      "singingPitchHash": "a46335a1d216cd6bac381b7eac5805ca5e24426490cb83bbba03d36cd277ea82",
      "singingPitchKey": "0d4a140fcd6b8986218119430a0626a7830594eac725eea0b27bbc03fd1b948b",
      "type": "pitchGenerationComplete",
    },
    {
      "phraseKey": "9c320dabec477dc39b4d25e96cfd70ce36dedd52ef5c370bb0c55f6876779d3e",
      "singingVolumeHash": "c5788679f5195210bd4fb5487e2372ee858a241853c9621d1eeda19a3d551d07",
      "singingVolumeKey": "892ee1899952e3d36a01e90e1c09d9db36219b0b5e17eb93dcacfb920a3cfc80",
      "type": "volumeGenerationComplete",
    },
    {
      "phraseKey": "9c320dabec477dc39b4d25e96cfd70ce36dedd52ef5c370bb0c55f6876779d3e",
      "singingVoiceHash": "57b2b493e1cffcaa229282253cd805c43278d5850ff8976089d980ed90d05dec",
      "singingVoiceKey": "47236dc5a0793cd194cdbb1d37a9d96cbb2035f937ceefc2e4d1f852d796e89d",
      "type": "voiceSynthesisComplete",
    },
    {
      "phraseInfo": {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000007",
            "lyric": "に",
            "noteNumber": 62,
            "phonemeSeedSource": 6,
            "position": 5280,
          },
        ],
        "queryHash": "a730dc27652d3d07029364f2f15549f930c4deea5f80b6adee5aaa50f60c5e32",
        "queryKey": "5be244819942af9a9a3d595ae701721dc91c1b1bd6ba1106024982daa63314b0",
        "singingPitchHash": "a46335a1d216cd6bac381b7eac5805ca5e24426490cb83bbba03d36cd277ea82",
        "singingPitchKey": "0d4a140fcd6b8986218119430a0626a7830594eac725eea0b27bbc03fd1b948b",
        "singingVoiceHash": "57b2b493e1cffcaa229282253cd805c43278d5850ff8976089d980ed90d05dec",
        "singingVoiceKey": "47236dc5a0793cd194cdbb1d37a9d96cbb2035f937ceefc2e4d1f852d796e89d",
        "singingVolumeHash": "c5788679f5195210bd4fb5487e2372ee858a241853c9621d1eeda19a3d551d07",
        "singingVolumeKey": "892ee1899952e3d36a01e90e1c09d9db36219b0b5e17eb93dcacfb920a3cfc80",
        "startTime": 5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "phraseKey": "9c320dabec477dc39b4d25e96cfd70ce36dedd52ef5c370bb0c55f6876779d3e",
      "type": "phraseRenderingComplete",
    },
  ],
}
`;

exports[`SongTrackRenderer > 正しいレンダリング結果が返される 1`] = `
{
  "renderingResultInfo": {
    "phraseInfos": Map {
      "561dec9c718d8d49de3211b895df9cec3d862923cf5631733048f600774fce4e" => {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000002",
            "lyric": "て",
            "noteNumber": 60,
            "phonemeSeedSource": 1,
            "position": 1920,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000003",
            "lyric": "す",
            "noteNumber": 62,
            "phonemeSeedSource": 2,
            "position": 2400,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000004",
            "lyric": "と",
            "noteNumber": 64,
            "phonemeSeedSource": 3,
            "position": 2880,
          },
        ],
        "queryHash": "9969e3e89e2616fc3e6da6ee5f3694bbcc0b2848eb056341c62e3ce4521135db",
        "queryKey": "e6b405a16e0a47c47dc9acf546f8db53981e1a783d9459d23c2339adabca88ca",
        "singingPitchHash": "9228d480d6cb405f77461ec4c1b7fa0f1d0bcc6ff2ecf9d038c2aadca449cff4",
        "singingPitchKey": "3d87943e412139517db2a3d4e193fc6f2234fd7a9825c7f23787c4334a018b0c",
        "singingVoiceHash": "6f4c259b73cb8831089f8da61b8c0d34a2b6c9dc8053e27d6719ee0656773971",
        "singingVoiceKey": "67d25f105aa7cd17d18df25372121592e84862a9e33797fd875dc5cd1859ed3e",
        "singingVolumeHash": "34deaab02b5eb0f134f81879e50df214a661937a0474bb0354d7067f88102eef",
        "singingVolumeKey": "7162fee52dd5a2d7ed485210544f953349d2499f9c152180fb251e907893175b",
        "startTime": 1.5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "3008f96721df2b2a05f4891582e788d6ca0e83805de7e402973b52679a755af6" => {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000005",
            "lyric": "い",
            "noteNumber": 60,
            "phonemeSeedSource": 4,
            "position": 3840,
          },
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000006",
            "lyric": "ち",
            "noteNumber": 60,
            "phonemeSeedSource": 5,
            "position": 4320,
          },
        ],
        "queryHash": "d042988b8760c555d53c6862fe71e1df34d60a6eda81271b10e947919393af44",
        "queryKey": "20217ea4ffb176cadd593c1d03a0797a141a039f1d12e809ae24ed6157d5e920",
        "singingPitchHash": "25558925c922c10ecc60e53ea2e85417c88cbbc5e17990045421138d9468cd35",
        "singingPitchKey": "86eeec91333143dc17f87f3e4277daa193bdd5e8d145c8cf4953de9f32b8fe04",
        "singingVoiceHash": "dde936509a0c4c73749812e52d198a7600f7f8710aa06059977037d9654db731",
        "singingVoiceKey": "c1970f3d570c706fcd7ccaf7e583a0f2c8097351bbac0ff5b437cb1d6423dea9",
        "singingVolumeHash": "01290852d0764175ff7a9bb8b23774bd80a8c8c3ce0fee4e83055c5900f3a3ba",
        "singingVolumeKey": "7d66577caf8f09e79473c9ae418a1ad69e9e7eb11a7e9f26f4271c9ddfa7dbd7",
        "startTime": 3.5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
      "9c320dabec477dc39b4d25e96cfd70ce36dedd52ef5c370bb0c55f6876779d3e" => {
        "notes": [
          {
            "duration": 480,
            "id": "00000000-0000-4000-0000-000000000007",
            "lyric": "に",
            "noteNumber": 62,
            "phonemeSeedSource": 6,
            "position": 5280,
          },
        ],
        "queryHash": "a730dc27652d3d07029364f2f15549f930c4deea5f80b6adee5aaa50f60c5e32",
        "queryKey": "5be244819942af9a9a3d595ae701721dc91c1b1bd6ba1106024982daa63314b0",
        "singingPitchHash": "a46335a1d216cd6bac381b7eac5805ca5e24426490cb83bbba03d36cd277ea82",
        "singingPitchKey": "0d4a140fcd6b8986218119430a0626a7830594eac725eea0b27bbc03fd1b948b",
        "singingVoiceHash": "57b2b493e1cffcaa229282253cd805c43278d5850ff8976089d980ed90d05dec",
        "singingVoiceKey": "47236dc5a0793cd194cdbb1d37a9d96cbb2035f937ceefc2e4d1f852d796e89d",
        "singingVolumeHash": "c5788679f5195210bd4fb5487e2372ee858a241853c9621d1eeda19a3d551d07",
        "singingVolumeKey": "892ee1899952e3d36a01e90e1c09d9db36219b0b5e17eb93dcacfb920a3cfc80",
        "startTime": 5,
        "trackId": "00000000-0000-4000-0000-000000000001",
      },
    },
    "type": "complete",
  },
}
`;
